--- a/src/app/ui/App.module.scss
+++ b/src/app/ui/App.module.scss
@@ -4,8 +4,8 @@
     text-align: center;
     min-height: 100vh;
     box-sizing: border-box;
-    width: 1280px;
-    padding: 20px;
+    width: 100vw;
+    font-size: 18px;
 
     main {
         display: flex;
