--- a/src/shared/Button/ui/Button.module.scss
+++ b/src/shared/Button/ui/Button.module.scss
@@ -1,14 +1,14 @@
 .button {
     cursor: pointer;
-    background-color: #6e96e3;
+    background-color: #5d3e1b;
     color: white;
     border: 0;
     border-radius: 5px;
     padding: 13px;
-    font-size: 16px;
+    font-size: 22px;
+    margin: 0;
 }
 
-
 .button:hover {
-    background-color: #4672c8;
+    background-color: #9c4100;
 }
