--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,15 +1,15 @@
 .Header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border: 2px solid black;
     width: 100%;
     height: 60px;
+    background-color: #5d3e1b;
+    color: #ffe298;
 
-    button {
-        width: 100px;
-        height: 40px;
-        border: 1px solid black;
+    .HeaderWrapper {
+        height: 100%;
+        margin: 0 15% 0 15%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 }
