--- a/src/shared/Button/ui/Button.module.scss
+++ b/src/shared/Button/ui/Button.module.scss
@@ -1,14 +1,13 @@
 .button {
     cursor: pointer;
-    background-color: #5d3e1b;
-    color: white;
+    background-color: #676767;
+    color: var(--text-color);
     border: 0;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 13px;
-    font-size: 22px;
-    margin: 0;
+    font-size: var(--buttonLink-font-size);
 }
 
 .button:hover {
-    background-color: #9c4100;
+    background-color: #818181;
 }
