--- a/src/widgets/FormWrapper/ui/FormWrapper.module.scss
+++ b/src/widgets/FormWrapper/ui/FormWrapper.module.scss
@@ -1,17 +1,14 @@
 .FormWrapper {
     display: flex;
     flex-direction: column;
+    padding: 20px;
+    background-color: var(--module-background-color);
+    border-radius: 20px;
+    min-height: 80vh;
+    width: 50vw;
 
-    .FormWrapper__Form {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 20px;
-        padding: 20px;
-    }
-
-    .FormWrapper__ButtonWrapper {
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
+    .FormWrapper__title {
+        font-size: var(--title-font-size);
+        font-weight: var(--medium-font-weight);
     }
 }
