--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,8 +1,8 @@
 .Header {
     width: 100%;
     height: 60px;
-    background-color: #5d3e1b;
-    color: #ffe298;
+    background-color: #171717;
+    border-bottom: 1px solid #e3e3e3;
 
     .HeaderWrapper {
         height: 100%;
@@ -11,5 +11,14 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        box-sizing: border-box;
+    }
+
+    .Header__LinkWrapper {
+        height: 100%;
+
+        button {
+            margin-left: 10px;
+        }
     }
 }
